--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </ul>
       </div>
     </main>
-    <script src="/assets/scripts/script.js
+    <script type="module" src="/assets/scripts/script.js
     "></script>
   </body>
 </html>
